updated based on comments

--- a/website/index.html
+++ b/website/index.html
@@ -12,7 +12,7 @@
 
 <div class="tab">
   <button class="tablinks" onclick="openTab(event, 'CapabilitiesSelection')" >Capabilities Selection</button>
-  <button class="tablinks" onclick="openTab(event, 'MapCavs')">Map & CAVs</button>
+  <button class="tablinks" onclick="openTab(event, 'MapCavs')">Map &amp CAVs</button>
   <button class="tablinks" onclick="openTab(event, 'MoreInfo')" id="defaultOpen">More Info</button>
 </div>
 
@@ -23,7 +23,7 @@
 
 <div id="MapCavs" class="tabcontent">
   <h3>Map & CAVs</h3>
-  <p>Not yet implemented.</p> 
+  <p>Not yet implemented.</p>
 </div>
 
 <div id="MoreInfo" class="tabcontent">
@@ -48,5 +48,5 @@
   <script src="scripts/tabs.js"></script>
   <script src="scripts/rosbridge.js"></script>
 </body>
-</html> 
+</html>
 
