--- a/website/index.html
+++ b/website/index.html
@@ -1,52 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8" /><!--This is important for character encoding -->
-<script src="http://cdn.robotwebtools.org/EventEmitter2/current/eventemitter2.min.js"></script>
-<script src="scripts/roslib.js"></script>
- <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <title>Welcome to CAV Prototype I</title>
+    <meta name="viewport" content="width=device-width">
+    <meta name="mobile-web-app-capable" content="yes">
 </head>
 <body>
+    <noscript>
+        <h2 style="color: #ff0000">
+            Seems your browser doesn't support Javascript! Websocket relies on Javascript being enabled. Please enable Javascript and reload this page!
+        </h2>
+    </noscript>
 
-<!-- <p>Click on the buttons inside the tabbed menu:</p> -->
+    <div id="divSystemAdvisory" align="center">
+        <h1 style="color: blue">Welcome to CAV Prototype I</h1>
+     
+        <h2 style="color: red"><u>System Advisory</u></h2>
+                <h3 id="warning" >
+                    <i>
+                        This vehicle is equipped with automated control and should be operated by
+                        <span style="color: #ff0000"><u>Authorized Users ONLY</u></span>.
+                    </i>
+        </h3>
 
-<div class="tab">
-  <button class="tablinks" onclick="openTab(event, 'CapabilitiesSelection')" >Capabilities Selection</button>
-  <button class="tablinks" onclick="openTab(event, 'MapCavs')">Map &amp CAVs</button>
-  <button class="tablinks" onclick="openTab(event, 'MoreInfo')" id="defaultOpen">More Info</button>
-</div>
+        <p>
+            Operators should proceed with caution and always obey traffic laws and pay attention to traffic. 
+            <br/> Please review the manual for complete system details and further instructions.</h2>
+        </p>
+        <p>
+            <form action="main.html">
+                <input type="submit" value="Start">
+            </form>
+        </p>
+    </div>
 
-<div id="CapabilitiesSelection" class="tabcontent">
-  <h3>Capabilities Selection</h3>
-  <p>Not yet implemented.</p>
-</div>
-
-<div id="MapCavs" class="tabcontent">
-  <h3>Map & CAVs</h3>
-  <p>Not yet implemented.</p>
-</div>
-
-<div id="MoreInfo" class="tabcontent">
-  <h3>More Info</h3>
-	  <div id="statusIndicator">
-	    <p id="connecting">
-	      Connecting to ROSbridge...
-	    </p>
-	    <p id="connected" style="color:#00D600; display:none">
-	      Connected to ROSBridge.
-	    </p>
-	    <p id="error" style="color:#FF0000; display:none">
-	      Error in the backend. ROSBridge unable to connect.
-	    </p>
-	    <p id="closed" style="display:none">
-	      ROSBridge connection closed.
-	    </p>
-	  </div>
-  <h4>System Status Logs</h4>
-  <div id="divLog" style="height:350px;width:98%;overflow:auto;background-color:#336699;color:white;scrollbar-base-color:gold;font-family:sans-serif;padding:10px;">
-  </div>
-  <script src="scripts/tabs.js"></script>
-  <script src="scripts/rosbridge.js"></script>
 </body>
 </html>
-
