--- a/website/main.html
+++ b/website/main.html
@@ -23,7 +23,7 @@
 </div>
 
 <div id="MapCavs" class="tabcontent">
-  <h3>Map & CAVs</h3>
+  <h3>Map &amp CAVs</h3>
   <p>Not yet implemented.</p>
 </div>
 
