update start button style

--- a/website/index.html
+++ b/website/index.html
@@ -29,7 +29,7 @@
         </p>
         <p>
             <form action="main.html">
-                <input type="submit" value="Start">
+                <input type="submit" value="Start" style="height: 80px; width: 220px; background-color:#336699; color: white;">
             </form>
         </p>
     </div>
