--- a/website/index.html
+++ b/website/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Welcome to CAV Prototype I</title>
+    <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width">
     <meta name="mobile-web-app-capable" content="yes">
 </head>
@@ -24,12 +25,13 @@
         </h3>
 
         <p>
+            <!-- TODO: Pull the instructions from the parameter -->
             Operators should proceed with caution and always obey traffic laws and pay attention to traffic. 
             <br/> Please review the manual for complete system details and further instructions.</h2>
         </p>
         <p>
             <form action="main.html">
-                <input type="submit" value="Start" style="height: 80px; width: 220px; background-color:#336699; color: white;">
+                <input type="submit" value="OK" style="height: 80px; width: 220px; background-color:#336699; color: white;">
             </form>
         </p>
     </div>
