Updated to add logic for CAV Guidance button, available plugins, future topic subscriptions, etc.

--- a/website/index.html
+++ b/website/index.html
@@ -25,7 +25,9 @@
         <p>
             <!-- TODO: Pull the instructions from the parameter -->
             Operators should proceed with caution and always obey traffic laws and pay attention to traffic.
-            <br /> Please review the manual for complete system details and further instructions.</h2>
+            <br/><br />
+            Please review the manual for complete system details and further instructions.
+
         </p>
         <form action="main.html">
             <input type="submit" value="OK" style="height: 80px; width: 220px; background-color:#336699; color: white;">
