Adjust Tabs, Show Route State, Fix waitForSystemAlert.

--- a/website/index.html
+++ b/website/index.html
@@ -30,7 +30,7 @@
 
         </p>
         <form action="main.html">
-            <input type="submit" value="OK" style="height: 80px; width: 220px; background-color:#336699; color: white;">
+            <input id="btnOk" type="submit" value="OK" style="height: 80px; width: 220px; background-color:#336699; color: white;">
         </form>
     </div>
 </body>
