--- a/website/main.html
+++ b/website/main.html
@@ -7,6 +7,7 @@
     <script src="http://cdn.robotwebtools.org/EventEmitter2/current/eventemitter2.min.js"></script>
     <script src="scripts/roslib.js"></script>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+
     <!--
     Setup:
     1) Move files command: sudo cp -R -r /home/mfromm/catkin_ws/src/CarmaPlatform/website/* /var/www/html/
@@ -26,9 +27,11 @@
 </head>
 <body>
     <div class="tab">
-        <button class="tablinks" onclick="openTab(event, 'divCapabilities')" id="defaultOpen">CAPABILITIES</button>
-        <button class="tablinks" onclick="openTab(event, 'divMapCavs')">MAP &amp CAVs</button>
-        <button class="tablinks" onclick="openTab(event, 'divMoreInfo')">MORE INFO</button>
+        <button class="tablinks" onclick="openTab(event, 'divCapabilities')" id="defaultOpen">Driver Tasks</button>
+        <button class="tablinks" onclick="openTab(event, 'divDriverView')">Driver View</button>
+        <button class="tablinks" onclick="openTab(event, 'divMap')">Map</button>
+        <button class="tablinks" onclick="openTab(event, 'divSystemStatus')">System Status</button>
+        <button class="tablinks" onclick="openTab(event, 'divSystemLogs')">System Logs</button>
     </div>
     <div class="tabheader">
         <button id="btnCAVGuidance" onclick="engageGuidance();" title="CAV Guidance" class="button_disabled" disabled>CAV Guidance</button>
@@ -40,12 +43,62 @@
         <div id="divSubCapabilities" hidden="true" align="center">
         </div>
     </div>
-    <div id="divMapCavs" class="tabcontent">
-        <h3>Map &amp CAVs</h3>
+    <div id="divDriverView" class="tabcontent">
+        <h3>Driver View</h3>
         <p>Not yet implemented.</p>
     </div>
-    <div id="divMoreInfo" class="tabcontent">
-        <h3>More Info</h3>
+    <div id="divMap" class="tabcontent">
+        <h3>Map View</h3>
+        <p>Not yet implemented.</p>
+    </div>
+    <div id="divSystemStatus" class="tabcontent">
+        <h3>System Status</h3>
+        <table id="tblSystemStatus" class="table-style1">
+            <tr>
+                <td class="col-style1">
+                    <table  id="tblFirst">
+                        <tr>
+                            <td class="section1" colspan="2">
+                                <strong>Important Vehicle Information</strong>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="col-style2a">Title</td>
+                            <td class="col-style2b">Value</td>
+                        </tr>
+                    </table>
+                </td>
+                <td class="col-style1">
+                    <table id="tblSecond">
+                        <tr>
+                            <td class="section1" colspan="2">
+                                <strong>Route Information</strong>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="col-style2a">Title</td>
+                            <td class="col-style2b">Value</td>
+                        </tr>
+                    </table>
+                </td>
+                <td class="col-style1">
+                    <table  id="tblThird">
+                        <tr>
+                            <td class="section1" colspan="2">
+                                <strong>Host Vehicle Information </strong>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="col-style2a">Title</td>
+                            <td class="col-style2b">Value</td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+        </table>
+    </div>
+    <div id="divSystemLogs" class="tabcontent">
+        <h3>System Logs</h3>
         <div id="statusIndicator">
             <p id="connecting">
                 Connecting to ROSbridge...
@@ -60,7 +113,7 @@
                 ROSBridge connection closed.
             </p>
         </div>
-        <h4>System Status Logs</h4>
+        <p/>
         <div id="divLog" class="logStatus">
         </div>
     </div>
