Updated UI to handle page refresh and guidance disengaging.

--- a/website/index.html
+++ b/website/index.html
@@ -1,37 +1,37 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>Welcome to CAV Prototype I</title>
+    <title>CAV Prototype I</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width">
     <meta name="mobile-web-app-capable" content="yes">
 </head>
 <body>
-    <noscript>
-        <h2 style="color: #ff0000">
-            Seems your browser doesn't support Javascript! Websocket relies on Javascript being enabled. Please enable Javascript and reload this page!
-        </h2>
-    </noscript>
-    <div id="divSystemAdvisory" align="center">
-        <h1 style="color: blue">Welcome to CAV Prototype I</h1>
+<noscript>
+    <h2 style="color: #ff0000">
+        Seems your browser doesn't support Javascript! Websocket relies on Javascript being enabled. Please enable Javascript and reload this page!
+    </h2>
+</noscript>
+<div id="divSystemAdvisory" align="center">
+    <h1 style="color: blue">Welcome to CAV Prototype I</h1>
 
-        <h2 style="color: red"><u>System Advisory</u></h2>
-        <h3 id="warning">
-            <i>
-                This vehicle is equipped with automated control and should be operated by
-                <span style="color: #ff0000"><u>Authorized Users ONLY</u></span>.
-            </i>
-        </h3>
-        <p>
-            <!-- TODO: Pull the instructions from the parameter -->
-            Operators should proceed with caution and always obey traffic laws and pay attention to traffic.
-            <br /><br />
-            Please review the manual for complete system details and further instructions.
+    <h2 style="color: red"><u>System Advisory</u></h2>
+    <h3 id="warning">
+        <i>
+            This vehicle is equipped with automated control and should be operated by
+            <span style="color: #ff0000"><u>Authorized Users ONLY</u></span>.
+        </i>
+    </h3>
+    <p>
+        <!-- TODO: Get the official System Advisory message. -->
+        Operators should proceed with caution and always obey traffic laws and pay attention to traffic.
+        <br /><br />
+        Please review the manual for complete system details and further instructions.
 
-        </p>
-        <form action="main.html">
-            <input id="btnOk" type="submit" value="OK" style="height: 80px; width: 220px; background-color:#336699; color: white;">
-        </form>
-    </div>
+    </p>
+    <form action="main.html">
+        <input id="btnOk" type="submit" value="OK" style="height: 80px; width: 220px; background-color:#336699; color: white;">
+    </form>
+</div>
 </body>
 </html>
