Update UI to add new route_status, subscribe to Current Segment, and add speed limit sign to Drivers View.

--- a/website/main.html
+++ b/website/main.html
@@ -44,8 +44,10 @@
     </div>
 </div>
 <div id="divDriverView" class="tabcontent">
-    <h3>Driver View</h3>
-    <p>Not yet implemented.</p>
+    <div class="divSpeedLimit">
+        <img src="images/speedlimitsign.png" alt="Speed Limit" style="width:200px;height:200px">
+        <div id="divSpeedLimitValue"></div>
+    </div>
 </div>
 <div id="divMap" class="tabcontent">
     <div id="map"></div>
@@ -62,8 +64,8 @@
                         </td>
                     </tr>
                     <tr>
-                        <td class="col-style2a">Title</td>
-                        <td class="col-style2b">Value</td>
+                        <td class="col-title">Title</td>
+                        <td class="col-title">Value</td>
                     </tr>
                 </table>
             </td>
@@ -75,8 +77,8 @@
                         </td>
                     </tr>
                     <tr>
-                        <td class="col-style2a">Title</td>
-                        <td class="col-style2b">Value</td>
+                        <td class="col-title">Title</td>
+                        <td class="col-title">Value</td>
                     </tr>
                 </table>
             </td>
@@ -88,8 +90,8 @@
                         </td>
                     </tr>
                     <tr>
-                        <td class="col-style2a">Title</td>
-                        <td class="col-style2b">Value</td>
+                        <td class="col-title">Title</td>
+                        <td class="col-title">Value</td>
                     </tr>
                 </table>
             </td>
