System Version and Copyright added as a footer.

--- a/website/main.html
+++ b/website/main.html
@@ -150,4 +150,8 @@
     </div>
 </div>
 </body>
+<footer>
+    <p class="copyright">© LEIDOS 2017</p>
+    <p class="systemversion">&nbsp;</p>
+</footer>
 </html>
