--- a/website/main.html
+++ b/website/main.html
@@ -63,19 +63,24 @@
         <img src="images/speedlimitsign.png" alt="Speed Limit" style="width:200px;height:200px">
         <div id="divSpeedLimitValue"></div>
     </div>
+    <div class="divSpeedometer">
+        <div class="gauge-a"></div>
+        <div class="gauge-b"></div>
+        <div class="gauge-c"></div>
+        <div class="gauge-data"><h1 id="percent">0</h1><br>MPH</div>
+    </div>
 </div>
 <div id="divMap" class="tabcontent">
     <div id="map"></div>
 </div>
 <div id="divSystemStatus" class="tabcontent">
-    <h3>System Status</h3>
     <table id="tblSystemStatus" class="table-style1">
         <tr>
             <td class="col-style1">
-                <table id="tblFirst">
+                <table id="tblFirstA">
                     <tr>
                         <td class="section1" colspan="2">
-                            <strong>Important Vehicle Information</strong>
+                            <strong>Important Vehicle Info</strong>
                         </td>
                     </tr>
                     <tr>
@@ -85,10 +90,21 @@
                 </table>
             </td>
             <td class="col-style1">
-                <table id="tblSecond">
+                <table id="tblSecondA">
                     <tr>
                         <td class="section1" colspan="2">
-                            <strong>Route Information</strong>
+                            <strong>Route Info</strong>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="col-title">Title</td>
+                        <td class="col-title">Value</td>
+                    </tr>
+                </table>
+                <table id="tblSecondB">
+                    <tr>
+                        <td class="section1" colspan="2">
+                            <strong>Host Vehicle Info</strong>
                         </td>
                     </tr>
                     <tr>
@@ -101,7 +117,7 @@
                 <table id="tblThird">
                     <tr>
                         <td class="section1" colspan="2">
-                            <strong>Host Vehicle Information </strong>
+                            <strong>Guidance Related Info</strong>
                         </td>
                     </tr>
                     <tr>
@@ -142,7 +158,7 @@
             <h2>System Alert!</h2>
         </div>
         <div class="modal-body">
-            <p>Some text in the Modal Body</p>
+            <p>Some text in the Modal Body.</p>
         </div>
         <div class="modal-footer">
             <button id="btnModal" onclick="closeModal();" title="CAV Guidance">OK</button>
