updated based on suggested PR changes

--- a/website/main.html
+++ b/website/main.html
@@ -152,7 +152,7 @@
 </div>
 <!-- The Modal -->
 <div id="myModal" class="modal">
-    <!-- Modal content -->s
+    <!-- Modal content -->
     <div class="modal-content">
         <div class="modal-header">
             <span class="close">&times;</span>
