GUI multiple changes

--- a/website/logout.html
+++ b/website/logout.html
@@ -31,17 +31,14 @@
     <h1 style="color: blue">Goodbye and thank you for using CAV Prototype I!</h1>
 
     <!--<h2 style="color: red"><u>System Advisory</u></h2>-->
-    <h3 id="warning">
+    <h2 id="warning">
         <i>
             You should now have manual control of the vehicle.
         </i>
-    </h3>
-    <p>
-        <br /><br />
-        <!-- TODO: Get better description from team on logout instructions. -->
-        To re-engage Guidance, please close this browser and contact your system administrator to re-launch the system.
-        <br /><br />
-    </p>
+    </h2>
+    <!-- TODO: Get better description from team on logout instructions. -->
+    <h3>To re-engage Guidance, please close this browser and contact your system administrator to re-launch the system.</h3>
+    <br />
 </div>
 </body>
 </html>
