Updated to display Speed CMD on Driver View

--- a/website/main.html
+++ b/website/main.html
@@ -61,15 +61,23 @@
 </div>
 <div id="divDriverView" class="tabcontent">
     <div id="divRouteInfo">No Route Selected : 00h 00m 00s</div>
-    <div class="divSpeedLimit">
-        <img src="images/speedlimitsign.png" alt="Speed Limit" class="speed_limit_sign">
-        <div id="divSpeedLimitValue">0</div>
-    </div>
     <div class="divSpeedometer">
         <div class="gauge-a"></div>
         <div class="gauge-b"></div>
         <div class="gauge-c"></div>
         <div class="gauge-data"><h1 id="percent">0</h1><br>MPH</div>
+    </div>
+    <div id="divSpeedCmd" class="sign-black-border-outer">
+        <div class="sign-black-border-inner">
+            <div class="sign-black-border-title">SPEED CMD</div>
+            <div id="divSpeedCmdValue" class="sign-black-border-value">0</div>
+        </div>
+    </div>
+    <div id="divSpeedLimit" class="sign-black-border-outer">
+        <div class="sign-black-border-inner">
+            <div class="sign-black-border-title">SPEED LIMIT</div>
+            <div id="divSpeedLimitValue" class="sign-black-border-value">0</div>
+        </div>
     </div>
 </div>
 <div id="divMap" class="tabcontent">
