Changes to index.html to increase font size

--- a/website/index.html
+++ b/website/index.html
@@ -20,6 +20,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width">
     <meta name="mobile-web-app-capable" content="yes">
+    <link rel="stylesheet" type="text/css" href="css/styles.css"/>
 </head>
 <body>
 <noscript>
@@ -28,24 +29,28 @@
     </h2>
 </noscript>
 <div id="divSystemAdvisory" align="center">
-    <h1 style="color: blue">Welcome to CAV Prototype I</h1>
-
-    <h2 style="color: red"><u>System Advisory</u></h2>
-    <h3 id="warning">
+    <h1 style="color: blue">
+        Welcome to CAV Prototype I
+        <br/>
+    </h1>
+    <h2 id="warning">
+        <div style="color: red; font-size: 28px;">
+            <i><u>System Advisory</u></i>
+            <br/><br/>
+        </div>
         <i>
             This vehicle is equipped with automated control and should be operated by
             <span style="color: #ff0000"><u>Authorized Users ONLY</u></span>.
         </i>
-    </h3>
-    <p>
+        <br /> <br />
         <!-- TODO: Get the official System Advisory message. -->
         Operators should proceed with caution and always obey traffic laws and pay attention to traffic.
         <br /><br />
         Please review the manual for complete system details and further instructions.
-
-    </p>
+        <br /><br />
+    </h2>
     <form action="main.html">
-        <input id="btnOk" type="submit" value="OK" style="height: 80px; width: 220px; background-color:#336699; color: white;">
+        <input id="btnOk" type="submit" value="OK">
     </form>
 </div>
 </body>
