code checked in to unit test for the distance to next speed limit.

--- a/website/main.html
+++ b/website/main.html
@@ -79,6 +79,7 @@
             <div id="divSpeedLimitValue" class="sign-black-border-value">0</div>
         </div>
     </div>
+    <div id="divDistRemaining">Distance Remaining to Next Speed Limit: 0 miles</div>
 </div>
 <div id="divMap" class="tabcontent">
     <div id="map"></div>
