Updated for Guidance restart

--- a/website/main.html
+++ b/website/main.html
@@ -170,7 +170,7 @@
             <p>Some text in the Modal Body.</p>
         </div>
         <div class="modal-footer">
-            <button id="btnModal" onclick="closeModal();" title="CAV Guidance">OK</button>
+            <button id="btnModal" title="CAV Guidance">OK</button>
         </div>
     </div>
 </div>
