--- a/website/index.html
+++ b/website/index.html
@@ -49,7 +49,7 @@
         Please review the manual for complete system details and further instructions.
         <br /><br />
     </h2>
-    <form action="main.html">
+    <form action="scripts/testLaunch.php">
         <input id="btnOk" type="submit" value="OK">
     </form>
 </div>
