--- a/website/main.html
+++ b/website/main.html
@@ -191,4 +191,7 @@
     <p class="copyright">© LEIDOS 2017</p>
     <p class="systemversion">&nbsp;</p>
 </footer>
+<form action="scripts/killPlatform.php">
+    <input id="btnKill" type="submit" value="Shutdown">
+</form>
 </html>
