--- a/website/main.html
+++ b/website/main.html
@@ -41,11 +41,17 @@
 </head>
 <body>
     <div class="tab">
-        <button class="tablinks" onclick="openTab(event, 'divCapabilities')" id="defaultOpen">TASKS</button>
-        <button class="tablinks" onclick="openTab(event, 'divDriverView')">VIEW</button>
-        <button class="tablinks" onclick="openTab(event, 'divMap')">MAP</button>
-        <button class="tablinks" onclick="openTab(event, 'divSystemStatus')">STATUS</button>
-        <button class="tablinks" onclick="openTab(event, 'divSystemLogs')">LOGS</button>
+        <button class="tablinks active" onclick="openTab(event, 'divCapabilities')" id="defaultOpen"><i class="fa fa-tasks" aria-hidden="false"></i>&nbsp;Tasks</button>
+        <button class="tablinks" onclick="openTab(event, 'divDriverView')"><i class="fa fa-qrcode" aria-hidden="true"></i>&nbsp;Views</button>
+        <button class="tablinks" onclick="openTab(event, 'divMap')"><i class="fa fa-map" aria-hidden="true"></i>&nbsp;Map</button>
+        <button class="tablinks" onclick="openTab(event, 'divSystemStatus')"><i class="fa fa-info-circle" aria-hidden="true"></i>&nbsp;Status</button>
+        <button class="tablinks" onclick="openTab(event, 'divSystemLogs')"><i class="fa fa-file-text" aria-hidden="true"></i>&nbsp;Logs</button>
+    </div>
+    <div class="tabindicators">
+        <button><img id="imgACCPrimed" src="images/acc2.png" style="width: 40px; height: 40px;" /></button>
+        <button><i id="imgPinPoint" class="fa fa-map-pin fa-2x" aria-hidden="true""></i></button>
+        <button><i class="fa fa-wifi fa-2x" aria-hidden="true" style="color:gray;"></i></button>
+        <button><i class="fa fa-handshake-o fa-2x" aria-hidden="true" style="color:gray;"></i></button>
     </div>
     <div class="tabheader">
         <button id="btnCAVGuidance" onclick="engageGuidance();" title="CAV Guidance" class="button_cav button_disabled" disabled="true">CAV Guidance</button>
