--- a/website/main.html
+++ b/website/main.html
@@ -48,7 +48,7 @@
         <button class="tablinks" onclick="openTab(event, 'divSystemLogs')"><i class="fa fa-file-text" aria-hidden="true"></i>&nbsp;Logs</button>
     </div>
     <div class="tabindicators">
-        <button><img id="imgACCPrimed" src="images/acc2.png" style="width: 40px; height: 40px;" /></button>
+        <button><img id="imgACCPrimed" src="images/acc_primed.png" style="width: 40px; height: 40px;" /></button>
         <button><i id="imgPinPoint" class="fa fa-map-pin fa-2x" aria-hidden="true""></i></button>
         <button><i class="fa fa-wifi fa-2x" aria-hidden="true" style="color:gray;"></i></button>
         <button><i class="fa fa-handshake-o fa-2x" aria-hidden="true" style="color:gray;"></i></button>
