--- a/website/main.html
+++ b/website/main.html
@@ -48,7 +48,7 @@
         <button class="tablinks" onclick="openTab(event, 'divSystemLogs')"><i class="fa fa-file-text" aria-hidden="true"></i><span class="tabName">&nbsp;Logs</span></button>
     </div>
     <div class="tabindicators">
-        <button onclick="alert('To be implemented');"><img id="imgACCPrimed" src="images/acc2.png" style="width: 40px; height: 40px;" /></button>
+        <button onclick="alert('To be implemented');"><img id="imgACCPrimed" src="images/acc_primed.png" style="width: 40px; height: 40px;" /></button>
         <button id="btnPinPoint" onclick="alert('To be implemented');" disabled><i id="imgPinPoint" class="fa fa-map-pin fa-2x" aria-hidden="true"></i></button>
         <button id="btnWIFI" class="" onclick="alert('To be implemented');" disabled><i class="fa fa-wifi fa-2x" aria-hidden="true" style="color:gray;"></i></button>
         <button id="btnConnected" class="" onclick="alert('To be implemented');" disabled><i class="fa fa-handshake-o fa-2x" aria-hidden="true" style="color:gray;"></i></button>
