--- a/website/main.html
+++ b/website/main.html
@@ -29,6 +29,7 @@
     </script>
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
     <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome-animation.min.css"/>
     <!--
     Setup:
     1) Move files command: sudo cp -R -r /home/mfromm/catkin_ws/src/CarmaPlatform/website/* /var/www/html/
@@ -48,8 +49,8 @@
         <button class="tablinks" onclick="openTab(event, 'divSystemLogs')"><i class="fa fa-file-text" aria-hidden="true"></i><span class="tabName">&nbsp;Logs</span></button>
     </div>
     <div class="tabindicators">
-        <button onclick="alert('To be implemented');"><img id="imgACCPrimed" src="images/acc_primed.png" style="width: 40px; height: 40px;" /></button>
-        <button id="btnPinPoint" onclick="alert('To be implemented');" disabled><i id="imgPinPoint" class="fa fa-map-pin fa-2x" aria-hidden="true"></i></button>
+        <button id="btnACCPrimed" disabled><img id="imgACCPrimed" src="images/acc_primed.png" style="width: 40px; height: 40px;" /></button>
+        <button id="btnPinPoint" disabled><i id="imgPinPoint" class="fa fa-map-pin fa-2x" aria-hidden="true"></i></button>
         <button id="btnWIFI" class="" onclick="alert('To be implemented');" disabled><i class="fa fa-wifi fa-2x" aria-hidden="true" style="color:gray;"></i></button>
         <button id="btnConnected" class="" onclick="alert('To be implemented');" disabled><i class="fa fa-handshake-o fa-2x" aria-hidden="true" style="color:gray;"></i></button>
     </div>
@@ -162,7 +163,7 @@
         </div>
     </div>
     <!-- The Modal -->
-    <div id="myModal" class="modal">
+    <div id="modalMessageBox" class="modal">
         <!-- Modal content -->
         <div class="modal-content">
             <div class="modal-header">
@@ -175,6 +176,10 @@
             <div class="modal-footer">
                 <button id="btnModal" title="CAV Guidance">OK</button>
             </div>
+        </div>
+    </div>
+    <div id="modalUIInstructions">
+        <div id="modalUIInstructionsContent">
         </div>
     </div>
     <audio id="audioAlert1" preload="auto">
