renamed and removed unecessary file

--- a/website/widgets/threeregion.html
+++ b/website/widgets/threeregion.html
@@ -49,13 +49,13 @@
 </head>
 <body>
     <div id="divRegionTopLeft">
-        <iframe src="../../widgets/jqWidgetsMobileDemo/widget.html"></iframe>
+        <iframe src="../widgets/jqWidgetsMobileDemo/widget.html"></iframe>
     </div>
     <div id="divRegionTopRight">
-        <iframe src="../../widgets/jqWidgetsMobileDemo/widget.html"></iframe>
+        <iframe src="../widgets/jqWidgetsMobileDemo/widget.html"></iframe>
     </div>
     <div id="divRegionBottom">
-        <iframe src="../../widgets/jqWidgetsMobileDemo/widget.html"></iframe>
+        <iframe src="../widgets/jqWidgetsMobileDemo/widget.html"></iframe>
     </div>
 </body>
 </html>
