--- a/website/widgets/fourregion.html
+++ b/website/widgets/fourregion.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <style>
@@ -16,18 +16,13 @@
             box-sizing: border-box;
             -moz-box-sizing: border-box;
             -webkit-box-sizing: border-box;
-            border-bottom: 5px solid black;
-            border-right: 5px solid black;
-            border-top: 5px solid black;
-            border-left: 5px solid black;
         }
-
             div iframe {
                 position: relative;
                 top: 0;
                 left: 0;
                 width: 100%;
-                height: 100%;           
+                height: 100%;
             }
 
         #divRegionTopLeft {
@@ -36,30 +31,37 @@
             background: orange;
         }
 
+        #divRegionTopRight {
+            top: 0;
+            left: 50%;
+            background: blue;
+        }
+
         #divRegionBottomLeft {
             top: 50%;
             left: 0;
             background: green;
         }
 
-        #divRegionRight {
-            top: 0;
+        #divRegionBottomRight {
+            top: 50%;
             left: 50%;
-            height: 400px;
-            background: blue;
+            background: red;
         }
-
     </style>
 </head>
 <body>
     <div id="divRegionTopLeft">
-        <iframe src="../../widgets/jqWidgetsMobileDemo/widget.html"></iframe>
+        <iframe src="../widgets/jqWidgetsMobileDemo/widget.html"></iframe>
+    </div>
+    <div id="divRegionTopRight">
+        <iframe src="../widgets/jqWidgetsMobileDemo/widget.html"></iframe>
     </div>
     <div id="divRegionBottomLeft">
-        <iframe src="../../widgets/jqWidgetsMobileDemo/widget.html"></iframe>
+        <iframe src="../widgets/jqWidgetsMobileDemo/widget.html"></iframe>
     </div>
-    <div id="divRegionRight">
-        <iframe src="../../widgets/jqWidgetsMobileDemo/widget.html"></iframe>
+    <div id="divRegionBottomRight">
+        <iframe src="../widgets/jqWidgetsMobileDemo/widget.html"></iframe>
     </div>
 </body>
 </html>
