--- a/website/main.html
+++ b/website/main.html
@@ -50,9 +50,9 @@
     </div>
     <div class="tabindicators">
         <button id="btnACCPrimed" disabled><img id="imgACCPrimed" src="images/acc_primed.png" style="width: 40px; height: 40px;" /></button>
-        <button id="btnPinPoint" disabled><i id="imgPinPoint" class="fa fa-map-pin fa-2x" aria-hidden="true"></i></button>
-        <button id="btnWIFI" class="" onclick="alert('To be implemented');" disabled><i class="fa fa-wifi fa-2x" aria-hidden="true" style="color:gray;"></i></button>
-        <button id="btnConnected" class="" onclick="alert('To be implemented');" disabled><i class="fa fa-handshake-o fa-2x" aria-hidden="true" style="color:gray;"></i></button>
+        <button id="btnPinPoint" disabled ><i id="imgPinPoint" class="fa fa-map-pin" aria-hidden="true" style="font-size: 38px;"></i></button>
+        <button id="btnWIFI" disabled onclick="alert('To be implemented');" ><i class="fa fa-wifi" aria-hidden="true" style="color:gray; font-size: 38px;"></i></button>
+        <button id="btnConnected" disabled onclick="alert('To be implemented');" ><i class="fa fa-handshake-o" aria-hidden="true" style="color:gray; font-size: 35px;"></i></button>
     </div>
     <div class="tabheader">
         <button id="btnCAVGuidance" onclick="engageGuidance();" title="CAV Guidance" class="button_cav button_disabled" disabled="true">CAV Guidance</button>
