--- a/website/main.html
+++ b/website/main.html
@@ -86,7 +86,7 @@
                 <div id="divSpeedLimitValue" class="sign-black-border-value">0</div>
             </div>
         </div>
-        <div id="divDistRemaining">Distance Remaining to Next Speed Limit: 0 miles</div>
+        <div id="divDistRemaining"></div>
         <div id="divLaneTracking"></div>
     </div>
     <div id="divMap" class="tabcontent">
