UI changes for FLETC

--- a/website/main.html
+++ b/website/main.html
@@ -200,7 +200,7 @@
     </audio>
 </body>
 <footer>
-    <p class="copyright">© LEIDOS 2017</p>
+    <p class="copyright"></p>
     <p class="systemversion">&nbsp;</p>
 </footer>
 </html>
