--- a/website/main.html
+++ b/website/main.html
@@ -198,6 +198,10 @@
         <source src="sound/hurry.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
+    <audio id="audioAlert4" preload="auto">
+        <source src="sound/arp.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
 </body>
 <footer>
     <p class="copyright"></p>
