Updated based on John's request to make the lane colors more vivid

--- a/website/lanesample.html
+++ b/website/lanesample.html
@@ -144,9 +144,9 @@
 
                     var targetlanestyle;
                     if (currentlaneid == targetlane)
-                        targetlanestyle = 'fill:#4CAF50; fill-opacity:0.22;'; //Green
+                        targetlanestyle = 'fill:#4CAF50; fill-opacity:1.00;'; //Green
                     else
-                        targetlanestyle = 'fill:cornflowerblue; fill-opacity:0.22;';
+                        targetlanestyle = 'fill:cornflowerblue; fill-opacity:1.00;'; //Blue
 
                     //static width 109 and heigh 217
                     var rect_target = draw.rect(109, 217).attr({
