updated scripts to allow remote launch from ui

--- a/website/index.html
+++ b/website/index.html
@@ -49,8 +49,12 @@
         Please review the manual for complete system details and further instructions.
         <br /><br />
     </h2>
-    <form action="scripts/launchPlatform.php">
+    <form action="main.html">
         <input id="btnOk" type="submit" value="OK">
+    </form>
+    <br /> <!-- TODO decide where this will live -->
+    <form action="scripts/launchPlatform.php">
+        <input id="btnOk" type="submit" value="Remote Launch">
     </form>
 </div>
 </body>
