Initial checkin for Widget FW changes

--- a/website/lanesample.html
+++ b/website/lanesample.html
@@ -175,7 +175,7 @@
 
                     //To calculate image x position = e#_line.x1 - 19px
                     //TODO: Convert to svg to change colors.
-                    var image = draw.image('../images/SUV.png', 145.136, 157.036);
+                    var image = draw.image('images/SUV.png', 145.136, 157.036);
                     image.attr({
                         id: 'r' + rect_index + '_image'
                         , x: line_x - 19
