--- a/website/main.html
+++ b/website/main.html
@@ -78,8 +78,8 @@
     </div>
     <div id="divDriverView" class="tabcontent">
         <div id="divWidgetOptions" hidden>
+            <h3>Please select one or more widget(s): </h3>
             <div id="divWidgetOptionsList"></div>
-            <button id="btnWidget" title="Show Widgets" onclick="CarmaJS.WidgetFramework.showSelectedWidgets();">Show Widgets</button>
         </div>
         <div id="divWidgetArea"></div>
     </div>
@@ -158,6 +158,10 @@
         </div>     
         <p />
         <button id="btnModalLogout2" title="Shutdown and Logout" class="btnModal" onclick="javascript: shutdown();">Logout</button>
+        <!-- TODO: Implement to show list again
+        &nbsp;
+        <button id="btnWidget" title="Show Widget Options" class="btnModal" onclick="CarmaJS.WidgetFramework.showWidgetOptions();">Show Widget Options</button>
+        -->
         <p/>
         <div id="divLog" class="logStatus">
         </div>
