Additional updates with ShowWidgetOptions

--- a/website/main.html
+++ b/website/main.html
@@ -158,10 +158,10 @@
         </div>     
         <p />
         <button id="btnModalLogout2" title="Shutdown and Logout" class="btnModal" onclick="javascript: shutdown();">Logout</button>
-        <!-- TODO: Implement to show list again
+        <!-- TODO: Implement to show list again  -->
         &nbsp;
         <button id="btnWidget" title="Show Widget Options" class="btnModal" onclick="CarmaJS.WidgetFramework.showWidgetOptions();">Show Widget Options</button>
-        -->
+
         <p/>
         <div id="divLog" class="logStatus">
         </div>
