Updated to add controlling plugins to status icons.

--- a/website/main.html
+++ b/website/main.html
@@ -66,6 +66,14 @@
         <button id="btnPinPoint" disabled ><i id="imgPinPoint" class="fa fa-map-pin" aria-hidden="true" style="font-size: 38px;"></i></button>
         <button id="btnWIFI" disabled onclick="alert('To be implemented');" ><i class="fa fa-wifi" aria-hidden="true" style="color:gray; font-size: 38px;"></i></button>
         <button id="btnConnected" disabled onclick="alert('To be implemented');" ><i class="fa fa-handshake-o" aria-hidden="true" style="color:gray; font-size: 35px;"></i></button>
+        <button disabled>
+            <span id="spanLonPlugin" style="font-size:20px; display:block; text-align:right; padding-top:10px; min-height:25px;">&nbsp;</span>
+            <i id="imgLonPlugin" class="fa fa-arrows-v" aria-hidden="true" style="font-size:38px; display:block; margin-left:-38px;margin-top:-30px;"></i>
+        </button>
+        <button disabled>
+            <span id="spanLatPlugin" style="font-size:20px; display:block; text-align:center; padding-top:5px; min-height:25px;">&nbsp;</span>
+            <i id="imgLatPlugin" class="fa fa-arrows-h" aria-hidden="true" style="font-size:40px; display:block; margin-top:-10px;  margin-bottom:-15px;"></i>
+        </button>
     </div>
     <div class="tabheader">
         <button id="btnCAVGuidance" onclick="activateGuidance();" title="CAV Guidance" class="button_cav button_disabled" disabled="true">CAV Guidance</button>
