Initial fixes to layout for platooning widget

--- a/website/main.html
+++ b/website/main.html
@@ -23,11 +23,18 @@
     <link rel="stylesheet" type="text/css" href="styles/styles.css" />
     <link rel="stylesheet" href="thirdparty/font-awesome-4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="thirdparty/font-awesome-4.7.0/css/font-awesome-animation.min.css"/>
+
     <link rel="stylesheet" href="thirdparty/jqwidgets/styles/jqx.base.css"/>
     <link rel = "stylesheet" href = "thirdparty/jquery-ui-1.12.1/jquery-ui.min.css"/>
 
     <script src = "thirdparty/jquery/jquery-1.12.4.min.js"></script>
     <script src = "thirdparty/jquery-ui-1.12.1/jquery-ui.min.js"></script>
+
+
+    <script type="text/javascript" src="thirdparty/jqwidgets/jqxcore.js"></script>
+    <script type="text/javascript" src="thirdparty/jqwidgets/jqxbuttons.js"></script>
+    <script type="text/javascript" src="thirdparty/jqwidgets/jqxscrollbar.js"></script>
+
 
     <!-- Widget Framework -->
     <script src="scripts/carma.config.js"></script>
@@ -95,6 +102,7 @@
         </div>
     </div>
     <div id="divDriverView" class="tabcontent">
+        <div id='divRouteInfo'>No Route Selected : 00h 00m 00s</div>
         <div id="divWidgetOptions" hidden>
             <h3>Please select one or more widget(s): </h3>
             <div id="divWidgetOptionsList">
