--- a/website/main.html
+++ b/website/main.html
@@ -81,7 +81,11 @@
     <div class="tabindicators">
         <button id="btnACCPrimed" disabled><img id="imgACCPrimed" src="images/acc_primed.png" style="width: 40px; height: 40px;" /></button>
         <button id="btnPinPoint" disabled ><i id="imgPinPoint" class="fa fa-map-pin" aria-hidden="true" style="font-size: 38px;"></i></button>
-        <button id="btnWIFI" disabled onclick="alert('To be implemented');" ><i class="fa fa-wifi" aria-hidden="true" style="color:gray; font-size: 38px;"></i></button>
+        <button disabled>
+            <object type="image/svg+xml" data="images/signal.svg" style="width: 50px; height: 50px;" id="objOBUBroadcast">
+                Your browser does not support SVG
+            </object>
+        </button>
         <button id="btnConnected" disabled onclick="alert('To be implemented');" ><i class="fa fa-handshake-o" aria-hidden="true" style="color:gray; font-size: 35px;"></i></button>
         <button disabled>
             <span id="spanLonPlugin" style="font-size:20px; display:block; text-align:right; padding-top:10px; min-height:25px;">&nbsp;</span>
