Updated widget and added glidepath acknowledgement popup

--- a/website/main.html
+++ b/website/main.html
@@ -208,8 +208,8 @@
                 <p>Some text in the Modal Body.</p>
             </div>
             <div class="modal-footer">
-                <button id="btnModalOK" title="Continue to Restart" class="btnModal">Continue</button> &nbsp; &nbsp;
-                <button id="btnModalLogout" title="Shutdown and Logout" class="btnModal">Logout</button>
+                <button id="btnModalButton1" title="btnModalButton1" class="btnModal">Button1</button> &nbsp; &nbsp;
+                <button id="btnModalButton2" title="btnModalButton2" class="btnModal">Button1</button>
             </div>
         </div>
     </div>
