Updated licensing for third party plugins and updated roslibjs to use minified version

--- a/website/main.html
+++ b/website/main.html
@@ -30,18 +30,16 @@
     <script src = "thirdparty/jquery/jquery-1.12.4.min.js"></script>
     <script src = "thirdparty/jquery-ui-1.12.1/jquery-ui.min.js"></script>
 
-
     <script type="text/javascript" src="thirdparty/jqwidgets/jqxcore.js"></script>
     <script type="text/javascript" src="thirdparty/jqwidgets/jqxbuttons.js"></script>
     <script type="text/javascript" src="thirdparty/jqwidgets/jqxscrollbar.js"></script>
-
 
     <!-- Widget Framework -->
     <script src="scripts/carma.config.js"></script>
     <script src="scripts/carma.widgetfw.js"></script>
 
     <script src="thirdparty/ros/eventemitter2.min.js"></script>
-    <script src="thirdparty/ros/roslib.js"></script>
+    <script src="thirdparty/ros/roslib.min.js"></script>
     <script src="scripts/control.js" defer></script>
     <script src="scripts/rosbridge.js" defer></script>
     <script src="scripts/googlemap.js"></script>
