initial checkin for troubleshooting

--- a/website/main.html
+++ b/website/main.html
@@ -208,6 +208,8 @@
             <div class="modal-footer">
                 <button id="btnModalButton1" title="btnModalButton1" class="btnModal">Button1</button> &nbsp; &nbsp;
                 <button id="btnModalButton2" title="btnModalButton2" class="btnModal">Button1</button>
+                <br/>
+                <div id="divFooterMessage"></div>
             </div>
         </div>
     </div>
